// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Backups > backups work 1`] = `
[
  {
    "date": "2017-01-01",
    "id": "backup1",
  },
  {
    "date": "2017-01-01",
    "id": "backup2",
  },
  {
    "date": "2017-01-01",
    "id": "backup3",
  },
]
`;

exports[`Backups > backups work 2`] = `
[
  {
    "date": "2017-01-01",
    "id": "backup1",
  },
  {
    "date": "2017-01-01",
    "id": "backup2",
  },
  {
    "date": "2016-12-30",
    "id": "backup3",
  },
  {
    "date": "2016-12-29",
    "id": "backup4",
  },
]
`;

exports[`Backups > backups work 3`] = `
[
  {
    "date": "2017-01-01",
    "id": "backup1",
  },
  {
    "date": "2017-01-01",
    "id": "backup2",
  },
  {
    "date": "2016-12-29",
    "id": "backup3",
  },
]
`;

exports[`Backups > backups work 4`] = `
[
  {
    "date": "2017-01-01",
    "id": "backup1",
  },
  {
    "date": "2017-01-01",
    "id": "backup2",
  },
  {
    "date": "2016-12-29",
    "id": "backup3",
  },
  {
    "date": "2016-12-28",
    "id": "backup4",
  },
  {
    "date": "2016-12-27",
    "id": "backup5",
  },
  {
    "date": "2016-12-26",
    "id": "backup6",
  },
  {
    "date": "2016-12-25",
    "id": "backup7",
  },
  {
    "date": "2016-12-24",
    "id": "backup8",
  },
  {
    "date": "2016-12-23",
    "id": "backup9",
  },
  {
    "date": "2016-12-22",
    "id": "backup10",
  },
]
`;
